Implement JIRA integration and enhance analytics features
This commit introduces comprehensive updates to the Taskmaster project, focusing on the integration with JIRA for issue management. Key changes include:

- Revised documentation reflecting new features and command usage.
- New CLI commands for generating markdown task files and managing task dependencies.
- Bidirectional JIRA integration for automatic issue creation and updates, including new fields in the `Issue` entity.
- Added event handlers for synchronizing local and JIRA data.
- New API endpoints for handling JIRA webhooks.
- Detailed setup instructions for JIRA integration, including API configuration and database migrations.
- Performance metrics and security enhancements, including webhook signature validation.
- User interface updates for the issue management dashboard with real-time updates and advanced analytics capabilities.
- Adherence to coding standards and best practices for maintainability.

--- a/src/IssueManager.Api/appsettings.json
+++ b/src/IssueManager.Api/appsettings.json
@@ -32,5 +32,9 @@
   "Authentication": {
     "RequireAuthentication": false,
     "DefaultScheme": "Bearer"
+  },
+  
+  "IssuesApi": {
+    "BaseUrl": "https://localhost:7001/api"
   }
 }
