--- a/src/Server.UI/appsettings.json
+++ b/src/Server.UI/appsettings.json
@@ -104,5 +104,24 @@
     "HighRiskThreshold": 60,
     "CriticalRiskThreshold": 80,
     "CacheExpirationMinutes": 15
+  },
+  "Jira": {
+    "Enabled": true,
+    "BaseUrl": "https://your-company.atlassian.net",
+    "Username": "integration@yourcompany.com",
+    "ApiToken": "your-jira-api-token",
+    "ProjectKey": "SUP",
+    "IssueTypeId": "10001",
+    "WebhookSecret": "your-webhook-secret",
+    "TimeoutSeconds": 30,
+    "MaxRetryAttempts": 3,
+    "FieldMapping": {
+      "CategoryFieldId": "customfield_10001",
+      "PriorityFieldId": "customfield_10002",
+      "ProductFieldId": "customfield_10003",
+      "SeverityFieldId": "customfield_10004",
+      "ReporterContactFieldId": "customfield_10005",
+      "ChannelFieldId": "customfield_10006"
+    }
   }
 }
