--- a/src/Migrators/Migrators.SqLite/Migrators.SqLite.csproj
+++ b/src/Migrators/Migrators.SqLite/Migrators.SqLite.csproj
@@ -17,4 +17,11 @@
       <Folder Include="Migrations\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
