Enhance notification preferences and escalation handling
Updated the installation manifest and marked tasks as completed in the chat escalation documentation. Introduced the `AgentNotificationPreferences` entity and updated related interfaces and commands to handle conversation IDs as strings. Enhanced the `EscalationPopup` and `Notification Preferences` components for better user interaction, including new services for managing notifications and messaging. Added JavaScript functions for UI improvements and implemented unit tests to ensure functionality. Updated project structure and namespaces accordingly.

--- a/tests/Application.UnitTests/Application.UnitTests.csproj
+++ b/tests/Application.UnitTests/Application.UnitTests.csproj
@@ -2,12 +2,13 @@
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
-        <RootNamespace>CleanArchitecture.Blazor.Application.UnitTests</RootNamespace>
-        <AssemblyName>CleanArchitecture.Blazor.Application.UnitTests</AssemblyName>
+        <RootNamespace>IssueManager.Application.UnitTests</RootNamespace>
+        <AssemblyName>IssueManager.Application.UnitTests</AssemblyName>
 
         <IsPackable>false</IsPackable>
 
         <LangVersion>default</LangVersion>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
