--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -25,6 +25,9 @@
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Hangfire.Core" Version="1.8.21" />
         <PackageReference Include="ZiggyCreatures.FusionCache" Version="2.4.0" />
+        
+        <!-- Bot Framework packages for activity models -->
+        <PackageReference Include="Microsoft.Bot.Schema" Version="4.22.0" />
      
     </ItemGroup>
     <ItemGroup>
