--- a/src/Bot/IssueManager.Bot.csproj
+++ b/src/Bot/IssueManager.Bot.csproj
@@ -29,6 +29,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\IssueManager.Shared\IssueManager.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
