Introduced the whstappapi  - personas and escalation toast

--- a/src/Server.UI/appsettings.json
+++ b/src/Server.UI/appsettings.json
@@ -7,6 +7,9 @@
   "AI": {
     "GeminiApiKey": "your-gemini-api-key"
   },
+  "AZURE_OPENAI_API_KEY": "8f1aa06e7f8c4b00b14ddb36149b74cd",
+  "AZURE_OPENAI_API_ENDPOINT": "https://openaidigitalautomation.openai.azure.com/",
+  "AZURE_OPENAI_DEPLOYMENT_NAME": "gpt-4.1",
   "Authentication": {
     "Microsoft": {
       "ClientId": "***",
