--- a/.github/workflows/deploy-server-ui.yml
+++ b/.github/workflows/deploy-server-ui.yml
@@ -35,7 +35,7 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
         
     - name: Restore dependencies
-      run: dotnet restore src/Server.UI/IssueManager.UI.csproj
+      run: dotnet restore IssueManager.slnx
       
     - name: Build application
       run: dotnet build src/Server.UI/IssueManager.UI.csproj --configuration Release --no-restore
