--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
         dotnet-version: 9.0.x
 
     - name: Restore dependencies
-      run: dotnet restore CleanArchitecture.Blazor.slnx
+      run: dotnet restore IssueManager.slnx
     - name: Build
-      run: dotnet build CleanArchitecture.Blazor.slnx --configuration Debug --no-restore
+      run: dotnet build IssueManager.slnx --configuration Debug --no-restore
    
