--- a/src/Server.UI/appsettings.json
+++ b/src/Server.UI/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
   "UseInMemoryDatabase": false,
   "DatabaseSettings": {
-    "DBProvider": "sqlite",
-    "ConnectionString": "Data Source=BlazorDashboardDb.db"
+    "DBProvider": "mssql",
+    "ConnectionString": "Server=tcp:sqlserver-citrus.database.windows.net,1433;Database=issuemanager;User ID=ridwanv;Password=1qaz2wsx!;Encrypt=true;Connection Timeout=30;"
   },
   "AI": {
     "GeminiApiKey": "your-gemini-api-key"
